[package]
name = "tdms"
description = "A LabView TDMS file parser written in Rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notyourlanguage.com/rust-tdms"
repository = "https://github.com/DnOberon/tdms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extended = "0.1.0"
thiserror = "1.0"
hex = "0.4.3"
criterion = "0.3"


[[bench]]
name = "general_benchmarks"
harness = false
