[package]
name = "tdms"
description = "A LabView TDMS file parser written in Rust"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/DnOberon/tdms"
# no need to include the test data directory in the crate, in fact that makes it so we can't publish
exclude = ["/data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.8.2"
thiserror = "1.0"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "general_benchmarks"
harness = false

